# MidiLine

./: README.md  pyproject.toml  requirements.txt
docs/: architecture.md  install_mac.md
examples/: record_to_midi.py
src/: audio_input.py  cli.py  event_detection.py  preprocess.py
src/midiline/: __init__.py  cli.py  event_detection.py  events.py  gui.py  midi_output.py  pitch_detection.py  preprocess.py  realtime.py
src/midiline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_event_detection.py  test_pitch_detection.py  test_preprocess.py
