[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "midiline"
version = "0.2.0"
description = "Command-line tool to convert monophonic audio to MIDI in real time"
authors = [{name = "MidiLine Developers"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aubio",
    "sounddevice",
    "mido",
    "click",
    "numpy",
    "scipy",
    "PyQt5",
]

[project.scripts]
midiline = "src.cli:cli"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
